--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -374,11 +374,7 @@ return(refs)
 
 ## Results
 
-Of the 18,359 self-identified Black and White participants in NHANES 2007-2012, 10,457 participants had valid height and high-quality spirometry. This included 7,533 adults and 2,924 youths.
-
-The flow of participants up to the baseline reference population is shown in @fig-flowchart. Participant flow across successive reference populations is shown in @suppfig-flowrefs.
-
-Characteristics of participants is summarized in @tbl-table1 .
+Of the 30,442 participants in NHANES 2007-2012, 17,032 participants had valid height and high-quality spirometry. Excluding smokers and individuals with respiratory diagnoses or symptoms led to 8,802 participants, including 4,832 adults and 3,970 youths (@fig-flowchart). Participant flow across successive reference populations is provided in appendix (@suppfig-flowrefs). Characteristics of participants is summarized in @tbl-table1 .
 
 ```{r}
 
@@ -507,17 +503,19 @@ predPlot <- function(df) {
 
 ```
 
-From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099, while the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in @fig-racialgap. The reduction in the proportion of Black participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black individuals in the US.
+From the base reference population to the most restrictive, the number of included participants decreased from 8,802 to 1921. The proportion of participants decreased from 13% to 7% for Black youth, from 11% to 4% for Black adults, from 15% to 10% for Mexican-American youth, from 10% to 3% for Mexican-American adults, from 7% to 5% for Other Hispanic youth, and from 6% to 3% for Other Hispanic adults (@fig-racialgap). The reduction in the proportion of participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black, Mexican-American, and Other Hispanic populations in the US. The proportion of participants remained within 1% of the reference population for participants who identified as either Asian or other race, including multiracial.
 
 In the baseline reference population, average FEV~1~ and FVC were 0.35 L and 0.42 L higher in White youth compared with Black youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.50 L for FEV~1~ and 0.69 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV~1~ and FVC was reduced by 25% and 26% in youth and by 26% and 19% in adults (@fig-racialgap).
 
-Excluding individuals with various SDoH did not reduce the proportion of Asian individuals (@suppfig-Asian). In the baseline reference population, average FEV~1~ and FVC were 0.18 L and 0.31 L higher in White youth compared with Asian youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.37 L for FEV~1~ and 0.50 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV~1~ and FVC was reduced by 7% and 13% in youth but, surprisingly, increased by 14% and 11% in adults (@suppfig-Asian).
+Excluding individuals with various SDoH did not reduce the proportion of Asian individuals. In the baseline reference population, average FEV~1~ and FVC were 0.18 L and 0.31 L higher in White youth compared with Asian youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.37 L for FEV~1~ and 0.50 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV~1~ and FVC was reduced by 7% and 13% in youth but, surprisingly, increased by 14% and 11% in adults (@suppfig-Asian).
 
-Among successive reference populations, the proportion of Mexican-Americans substantially decreased, confirming disproportionate impact of these exposures on Mexican-American population, compared to White population. Mexican-American youth had slightly higher FEV~1~ and FVC at baseline compared to White youth. Average FEV~1~ and FVC were 0.06 L and 0.04 L higher in Mexican-American youth compared to White youth, after adjusting for age, height, and biological sex at birth. Mexican-American and White adults had similar adjusted FEV~1~ and FVC at baseline (@suppfig-Mexican). Excluding individuals with unfavourable SDoH resulted in higher FEV~1~ and FVC values for Mexican-American population compared to White population. Adjusted average FEV~1~ and FVC values for Mexican-American youth were 0.09 L and 0.06 L higher than White youth. For adults, average FEV~1~ and FVC were both higher by 0.03 L compared to White adults (@suppfig-Mexican).
+Mexican-American youth had slightly higher FEV~1~ and FVC at baseline compared to White youth. Average FEV~1~ and FVC were 0.06 L and 0.04 L higher in Mexican-American youth compared to White youth, after adjusting for age, height, and biological sex at birth. Mexican-American and White adults had similar adjusted FEV~1~ and FVC at baseline (@suppfig-Mexican). Excluding individuals with unfavourable SDoH resulted in higher FEV~1~ and FVC values for Mexican-American population compared to White population. Adjusted average FEV~1~ and FVC values for Mexican-American youth were 0.09 L and 0.06 L higher than White youth. For adults, average FEV~1~ and FVC were both higher by 0.03 L compared to White adults (@suppfig-Mexican).
 
-The appendix includes additional results for non-Mexican Hispanic population (@suppfig-hispanic) and those who identified as "Other-including multiracial" (@suppfig-Other).
+The appendix includes additional results for non-Mexican Hispanic population (@suppfig-hispanic) and other race including multiracial individuals (@suppfig-Other).
 
 ### Secondary and Sensitivity Analyses
+
+We conducted a number of additional analyses for on lung function gap between Black and White populations.
 
 #### Biological Sex
 
@@ -537,25 +535,23 @@ In the leave-one-out analysis for the youth, the proportion of racial gap explai
 
 ## Discussion
 
-Our results show that a higher than previously reported proportion of racial differences in lung function between Black and White Americans can be explained by differences in SDoH [@harik-khan2001; @harik-khan2004]. Within studied SDoH variables in NHANES 2007-2012, we were able to explain 26% of the racial gap in lung function in adults, and as much as 35% of the gap in males under 20 years of age. The true contribution of SDoH to racial gaps in lung function is likely much higher, as only some aspects of SDoH are properly captured in NHANES. The difficulty of measuring SDoH and our incomplete and evolving understanding of the complex interplay between racism, social, and environmental factors suggest that what we see might just be the tip of the iceberg.
+Our results show that a higher than previously reported proportion of racial differences in lung function between Black and White Americans can be explained by differences in SDoH [@harik-khan2001; @harik-khan2004]. Within studied SDoH variables in NHANES 2007-2012, we were able to explain 26% of the racial gap in lung function in adults, and as much as 35% of the gap in males under 20 years of age. The true contribution of SDoH to racial gaps in lung function is likely higher, as only some aspects of SDoH are properly captured in NHANES. The difficulty of measuring SDoH and our incomplete and evolving understanding of the complex interplay between racism, social, and environmental factors suggest that what we see might just be the tip of the iceberg.
 
-Our results are consistent with a growing body of literature that implicates historical and structural inequities in perpetuating health disparities among racialized communities [@nardone2020; @schuyler2022; @gaffney2021; @levy2018]. However, we also observed a higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV1 explained by the studied exposures). This might be related to US-specific systemic factors such as the enduring impact of slavery, segregation, redlining, and other inequities and injustices that profoundly affect lung health. Supporting this notion, some studies have reported significantly higher levels of allostatic load and hypertension in US-born self-identified Black individuals compared to Black immigrants to the US [@doamekpor2015; @brown2017].
+Our results are consistent with a growing body of literature that implicates historical and structural inequities in perpetuating health disparities among racialized communities [@nardone2020; @schuyler2022; @gaffney2021; @levy2018]. However, we also observed a higher explained proportion of the racial gap in lung function among US-born Black and White individuals (i.e., up to 36% of the racial gap in adult FEV~1~ explained by the studied exposures). This might be related to US-specific systemic factors such as the enduring impact of slavery, segregation, redlining, and other inequities and injustices that profoundly affect lung health. Supporting this notion, some studies have reported significantly higher levels of allostatic load and hypertension in US-born self-identified Black individuals compared to Black immigrants to the US [@doamekpor2015; @brown2017]. Our exploratory analysis revealed that occupational exposures, obesity, and non-home ownership were the three exclusion criteria most responsible for explaining the racial gap in lung function between Black and White individuals.
 
-For Asian people,
+Similar to the reference populations used to develop lung function reference equations, our baseline reference population only excluded individuals with a history of smoking, lung disease, or respiratory symptoms. In this population, age-, sex-, and height-adjusted FEV~1~ and FVC were highest for Mexican-Amercians, followed by Non-Hispanic White, Other Hispanic, Asian, and Non-Hispanic Black populations. Introducing nine additional exclusion criteria to reference populations reduced racial disparities in lung function between Black and White individuals, but not for Asian population. Of note, the proportion of Asian people in the successive reference populations remained within 1% of the baseline value, indicating that the investigated SDoH did not disproportionately affect this population.
 
-Introducing nine additional exclusion criteria to reference populations significantly minimized racial disparities in lung function in our study. Our exploratory analysis revealed that occupational exposures, obesity, and non-home ownership were the three exclusion criteria most responsible for explaining the racial gap in lung function.
+What are the implications for lung function reference equations? Since these equations are designed to predict healthy lung function, they need to make an assumption about the nature of racial gaps in lung function, either explicitly or implicitly. For decades, ATS lung function testing guidelines have acknowledged the effects of social and environmental factors on the variability of lung function across populations [@lungfun1991]. However, race-specific lung function reference equations implicitly assumed racial gaps in lung function were normal and benign, the same way that differences based on biological sex at birth, height, and age, were considered normal. This practice was at odds with the recognized role of SDoH, reinforced inequities not just by perpetuating the notion of race as a biological determinant, but also by failing to account for the fact that at least some of the observed racial gap may be pathological, due to injury or suboptimal development caused by SDoH. In 2023, the ATS statement on race and ethnicity in pulmonary function testing advocated for a significant shift in practice. The statement acknowledged the importance and complexity of these exposures, rejected fixed differences between races, and embraced a more uncertain race-averaged reference equation, instead of the misleading statistical accuracy of the previous race-based equations [@bhakta2023].
 
-What are the implications for lung function reference equations? Since these equations are designed to predict healthy lung function, they need to make an assumption about the nature of racial gaps in lung function, either explicitly or implicitly. For decades, ATS lung function testing guidelines have acknowledged the effects of social and environmental factors on the variability of lung function across populations [@lungfun1991]. However, race-specific lung function reference equations implicitly assumed racial gaps in lung function were normal and benign, the same way that differences based on biological sex at birth, height, and age, were considered normal. This practice was at odds with the recognized role of SDoH, reinforced inequities not just by perpetuating the notion of race as a biological determinant, but also by failing to account for the fact that at least some of the observed racial gap may be pathological, due to injury caused by SDoH. In 2023, the ATS statement on race and ethnicity in pulmonary function testing advocated for a significant shift in practice. The statement acknowledged the importance and complexity of these exposures, rejected fixed differences between races, and embraced a more uncertain race-averaged reference equation, instead of the misleading statistical accuracy of the previous race-based equations [@bhakta2023].
-
-The newly recommended race-averaged GLI-Global reference equations no longer assume that racial differences in lung function are normal and benign differences. However, do they assume these differences are solely due to disproportionate environmental exposures and SDoH? The answer seems to be no, as GLI-Global equations use averages of race-specific reference lung function projections, as opposed to projecting the highest race-specific value for all [@bowerman2023].
+The newly recommended race-averaged GLI-Global reference equations no longer assume that racial differences in lung function are normal and benign differences. However, do they assume these differences are solely due to disproportionate environmental exposures and SDoH? The answer seems to be no, as GLI-Global equations use averages of four race-specific reference lung function projections, as opposed to projecting the highest race-specific value for all [@bowerman2023].
 
 Developing unbiased, fair, and practical lung function reference equations is challenging because of our limited understanding of complex exposures, lack of good representative data, and diverse applications of pulmonary function tests. Recognizing the good faith efforts of those working diligently to find a balance between feasibility, practicality, and an ideal accounting for all potential biases, one potential way forward, at least for some use cases of spirometry, involves explicitly accounting for effect of complex exposures. This does not require asking patients for their exposure history or social determinants at the point of care and can be achieved by tightening the inclusion criteria in the reference populations. Excluding individuals with unfavourable SDoH from reference populations results in a more uniformly healthy reference population across racial identities and makes the dataset less biased. However, this approach may reduce the racial representativeness of the data due to disproportionate exposures. Ensuring a sufficiently large and representative initial sample may allow oversampling to achieve representativeness across all groups.
 
-Proposals for developing lung function standards using data from participants of "middle-class origin who live and work in clean environments" have appeared in the literature as early as 1984 [@Myers1984]. There is also precedence for choosing reference populations based on favourable SDoH outside of lung function testing. One prominent example is the WHO Multicentre Growth Reference Study that was conducted to create birth to 2-years growth standards [@mercedes2004]. The study's sites were chosen through a meticulous process that took into account geographical and ethnic representativeness, and included affluent communities in the cities of New Delhi, Muscat, Accra, Oslo, Davis, and Pelotas. The eligibility criteria for individual mother and children included no health, environmental, and economic constraints on growth, mother's willingness to follow WHO feeding recommendations, among others [@mercedes2004].
+Proposals for developing lung function standards using data from participants of "middle-class origin who live and work in clean environments" have appeared in the literature as early as 1984 [@Myers1984]. There is also precedence for choosing reference populations based on favourable SDoH outside of lung function testing. One prominent example is the World Health Organization (WHO) Multicentre Growth Reference Study that was conducted to create birth to 2-years growth standards [@mercedes2004]. The study's sites were chosen through a meticulous process that took into account geographical and ethnic representativeness, and included affluent communities in the cities of New Delhi, Accra, Muscat, Oslo, Davis, and Pelotas. The eligibility criteria for individual mother and children included no health, environmental, and economic constraints on growth, mother's willingness to follow WHO feeding recommendations, among others [@mercedes2004].
 
-Our study highlights the necessity for further research to understand the interplay between SDoH, environmental exposures, and lung function across different populations. Future studies should aim to incorporate a wider array of SDoH, such as stress levels, access to healthcare, neighborhood safety, and intergenerational effects, including those related to wealth, social status, poverty, and trauma. There is also a need for longitudinal studies that can elucidate causal pathways and the potential impact of policy changes on reducing health disparities. Exploring the intersectionality of race and other demographic factors could provide a more nuanced understanding of how diverse identities influence lung health outcomes. Expanding research to include international cohorts could enhance the generalizability of findings and support the development of global and localized strategies to address lung health disparities.
+Our study highlights the necessity for further research to understand the interplay between SDoH, environmental exposures, and lung function across different populations. Future studies should aim to incorporate a wider array of SDoH, such as stress levels, neighborhood safety, and intergenerational effects, including those related to wealth, social status, poverty, and trauma. There is also a need for longitudinal studies that can elucidate causal pathways and the potential impact of policy changes on reducing health disparities. Exploring the intersectionality of race and other demographic factors could provide a more nuanced understanding of how diverse identities influence lung health outcomes. Expanding research to include international cohorts with high quality data collection could enhance the generalizability of findings and support the development of global and localized strategies to address lung health disparities.
 
-Certain limitations must be acknowledged. Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. Incomplete understanding and limited nature of available data also limits our assessment of complex social and environmental exposures and identities, such as effects of racism, intergenerational wealth effects, life-course exposure to pollutants, gender identity, violence, stress, and allostatic load.
+Certain limitations must be acknowledged. Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. We were not able to assess potential role of anthropometric differences, including those related to torso and leg length due to unavailability of the data in the studied NHANES cycles. Incomplete understanding and limited nature of available data also limits our assessment of complex social and environmental exposures and identities, such as effects of racism, intergenerational effects, life-course exposure to pollutants, gender identity, stress, and allostatic load.
 
 ## Conclusions
 
