--- a/references.bib
+++ b/references.bib
@@ -439,3 +439,50 @@ abstract = {  The multiple regression equation predicting lung function values f
 
 
 
+
+@article{Singh2001,
+	title = {All-cause and cause-specific mortality of immigrants and native born in the United States},
+	year = {2001},
+	month = {03},
+	date = {2001-03-01},
+	journal = {American Journal of Public Health},
+	pages = {392--399},
+	volume = {91},
+	number = {3},
+	doi = {10.2105/ajph.91.3.392},
+	url = {http://dx.doi.org/10.2105/ajph.91.3.392},
+	langid = {en}
+}
+
+@article{Fang1996,
+	title = {The Association between Birthplace and Mortality from Cardiovascular Causes among Black and White Residents of New York City},
+	author = {Fang, Jing and Madhavan, Shantha and Alderman, Michael H.},
+	year = {1996},
+	month = {11},
+	date = {1996-11-21},
+	journal = {New England Journal of Medicine},
+	pages = {1545--1551},
+	volume = {335},
+	number = {21},
+	doi = {10.1056/nejm199611213352101},
+	url = {http://dx.doi.org/10.1056/NEJM199611213352101},
+	langid = {en}
+}
+
+@article{Gaffney2024,
+	title = {Age of Emergence of Disparities in Asthma Prevalence and Morbidity among US Children},
+	author = {Gaffney, Adam and McCormick, Danny and Bor, David and Himmelstein, David U and Woolhandler, Steffie},
+	year = {2024},
+	month = {10},
+	date = {2024-10-15},
+	journal = {Annals of the American Thoracic Society},
+	doi = {10.1513/annalsats.202310-916oc},
+	url = {http://dx.doi.org/10.1513/AnnalsATS.202310-916OC},
+	langid = {en}
+}
+
+@article{adibi,
+	title = {Is Achieving a Fully Race-Neutral Approach to Lung Function Classification Even Possible?},
+	author = {Adibi, Amin and Sadatsafavi, Mohsen and Brigham, Emily P. and Bhatt, Surya},
+	journal = {American Journal of Respiratory and Critical Care Medicine}
+}
